# maerki_util

./: .coverage  .gitignore  README.md  maerki_util.code-workspace  pyproject.toml
scripts/: alpuma.bat  wxPyScan.bat  wxhttpupload.bat  zulu.bat
src/alpuma/: __init__.py  __main__.py  alpuma.py
src/alpuma_tests/: run.py
src/httpupload/: README.md  httpupload.py
src/klangspiel_rechnung2026/: AGENTS.md  README.md  README_klangspiel_rechnung2026.md  klangspiel_rechnung2026.py  run_json_update.sh  template.jinja  template.jinja2  util_dataclasses.py  util_jinja.py  util_jinja2.py  util_logging.py  util_typst.py  util_xml.py
src/klangspiel_rechnung2026/run_templates/: run_print.sh
src/pyImagesToPdf/: pyImageToPdf.py
src/pyImagesToPdf/samplefolder/: belege2pdf.bat  belege2pdf.py
src/pyckup/: __init__.py  __main__.py  pyckup.py
src/pyimages2pdf/: pyimages2pdf.py
src/pyimages2pdf/samplefolder/: belege2pdf.bat  belege2pdf.py
src/pyscan/: __init__.py  __main__.py  algorithms_pil_enhance.py  config_maerki-lenovo.py  config_probook470hombi.py  engine_scan_wia.py  readme_wia.txt  utils.py  wxPyScan.bat  wxPyScan.pjd  wxPyScan.py  wxPyScan.pyw  wxPyScan.xrc  wxPyScanConsole.bat  wxPyScanConsole.py
src/pyscan_linux/: discover.py  pyscan_linux_usb_device.txt  scan.py
src/pyscan_linux_tmp/: pyscan_linux.py  pyscan_linux_discover.py  pyscan_linux_fast.py
src/wxhttpupload/: __init__.py  __main__.py  http_upload_config.txt  httpupload.bat  httpupload.py  wxhttpupload.py  wxhttpupload_wdr.py  wxhttpupload_wdr.xrc
src/wxhttpupload_test/: http_upload_config.txt
src/zulu/: __init__.py  __main__.py  zulu.py  zulu_excel_reader.py
src/zulup/: AGENTS.md  README.md  README_IDEAS.md  README_reference.md  util_backup_directory.py  util_constants.py  util_json.py  util_json_metafile.py  util_json_zulup.py  util_logging.py  util_pytest.py  util_systemd_inhibit.py  util_tarfile.py  util_traverse_backup.py  util_traverse_zulup.py  util_zulup.py  zulup.py  zulup_ignore_by_now.py
src/zulux/: AGENTS.md  README.md  util_constants.py  util_zulux.py  zulux.py
tests/klangspiel_rechnung2026/: test_rechnung.py
tests/zulup/: conftest.py
tests/zulux/: test_a.py  test_a_input.txt  test_a_zulux_chmod.json  test_b_input.txt  test_b_zulux_chmod.json  test_c_input.txt  test_d_input.txt  test_directory_name_patterns_input.txt  test_directory_path_patterns_zulux_chmod.json  test_e_input.txt  test_e_zulux_chmod.json  test_f_input.txt  test_features.py  test_g_input.txt  test_input.py  test_mixed_files_and_directories_zulux_chmod.json  test_single_char_and_char_class_patterns_expected.txt
(+94 files in other folders)
